# fifabot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  PLAN.md  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: feed.py  orchestrator.py
backtest/: calibrated.py  engine.py  feed.py  report.py  signals.py  strategy.py  view.py  walkforward.py
core/: basket.py  calibration.py  cost_model.py  decision.py  edge_gate.py  fills.py  metrics.py  models.py  risk.py  sizing.py
core/signals/: base.py  consistency.py  devig.py  divergence.py
data/: clob.py  discovery.py  events.py  gamma.py  history.py  http.py  oddsapi.py  payloads.py  reference.py
docs/: backtesting.md
execution/: client.py  journal.py  lifecycle.py  orders.py  reconcile.py  store.py  venue.py
llm/: agent.py  schema.py
scripts/: live_microtrade.py  probe_amoy_order.py  probe_gamma.py  probe_odds_detail.py  record_reference_fixtures.py  set_allowances.py  verify_odds_api.py
tests/: conftest.py  test_skeleton.py
tests/app/: test_feed.py  test_orchestrator.py
tests/backtest/: test_calibrated.py  test_composite.py  test_engine.py  test_feed.py  test_report.py  test_shadow.py  test_signals.py  test_view.py  test_walkforward.py
tests/core/: test_basket.py  test_calibration.py  test_cost_model.py  test_decision.py  test_edge_gate.py  test_fills.py  test_metrics.py  test_models.py  test_risk.py  test_sizing.py
tests/data/: test_clob.py  test_discovery.py  test_events.py  test_gamma.py  test_history.py  (+4 more)
(+37 files in other folders)
